# app-budget

./: .env.example  .gitignore  .terraform.lock.hcl  Dockerfile  README.md  TODO.md  main.tf  outputs.tf  pyproject.toml  terraform.tf  test.py  variables.tf
.devcontainer/: devcontainer.json
.github/workflows/: build-deploy-docker-image.yaml  check-terraform-plan.yaml  deploy-app.yaml  lint-python-files.yaml  lint-python-types.yaml  lint-terraform-files.yaml  run-pre-commit-hooks.yaml  test-app.yaml
app/: config.py  database.py  dependency.py  main.py
app/crud/: __init__.py  _account.py  _base.py  _category.py  _payee.py  _transaction.py  account.py  category.py  payee.py  transaction.py
app/model/: __init__.py  _account.py  _base.py  _category.py  _payee.py  _transaction.py  account.py  category.py  payee.py  transaction.py
app/router/: account.py  category.py  payee.py  transaction.py
app/schema/: __init__.py  account.py  category.py  payee.py  transaction.py
app/test/router/: conftest.py  test_account.py  test_category.py  test_payee.py  test_transaction.py
figure/: infrastructure_architecture_diagram.drawio
script/: build-docker-image.sh  clean.sh  format-python-files.sh  publish-docker-image.sh  run-docker-container.sh  terraform-show-plan.sh  update-pre-commit-hooks.sh
scripts/: format.sh  lint.sh
