[tool.poetry]
name = "app-budget"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app_budget"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
sqlmodel = "^0.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.format]
max-line-length = "100"

[tool.pylint]
recursive = true
ignore = "debug.py"
disable = "R0903, C0114, C0115, C0116"
